--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "student-vendor-app",
   "version": "1.0.0",
   "description": "The Student-Vendor App is a digital platform that connects students with campus vendors, allowing easy browsing, ordering, and delivery of goods. It improves convenience, reduces queues, and helps vendors manage sales efficiently through a simple, fast, and reliable system.",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nodemon server.js"
   },
   "repository": {
     "type": "git",
